--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Open Opportunities
+title: SITE TITLE
+destination: NEW URL
 email: jeremy.zilar@gsa.gov
 description:
 baseurl: "" # the subpath of your site, e.g. /blog
