--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: SITE TITLE
-destination: NEW URL
+new_url: NEW URL
 email: jeremy.zilar@gsa.gov
 description:
 baseurl: "" # the subpath of your site, e.g. /blog
